[workspace]
resolver = "2"
members = ["cli", "client", "grpc", "node", "node-wasm", "node-uniffi", "proto", "rpc", "types", "utils"]

[workspace.dependencies]
blockstore = "0.7.1"
lumina-node = { version = "0.15.1", path = "node" }
lumina-node-wasm = { version = "0.10.2", path = "node-wasm" }
lumina-utils = { version = "0.3.0", path = "utils" }
celestia-client = { version = "0.1.1", path = "client" }
celestia-proto = { version = "0.9.1", path = "proto" }
celestia-grpc = { version = "0.6.1", path = "grpc", default-features = false }
celestia-rpc = { version = "0.12.1", path = "rpc", default-features = false }
celestia-types = { version = "0.14.1", path = "types", default-features = false }
tendermint = { version = "0.40.4", default-features = false }
tendermint-proto = "0.40.4"

libp2p = "0.54.1"
nmt-rs = "0.2.1"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.13.1", default-features = false }
tonic-web-wasm-client = "0.7.1"
tonic-build = { version = "0.13.1" }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.49"

[patch.crates-io]
# Uncomment to apply local changes
#beetswap = { path = "../beetswap" }
#blockstore = { path = "../blockstore" }
#nmt-rs = { path = "../nmt-rs" }
#libp2p = { path = "../../rust-libp2p/libp2p" }
#libp2p-core = { path = "../../rust-libp2p/core" }
#libp2p-swarm = { path = "../../rust-libp2p/swarm" }
#wasm-bindgen = { path = "../wasm-bindgen" }

# Uncomment this if you need debug symbols in release.
# Also check node-wasm's `Cargo.toml`.
#[profile.release]
#debug = true
