[workspace]
resolver = "2"
members = [
  "cli",
  "client",
  "grpc",
  "grpc/grpc-macros",
  "node",
  "node-wasm",
  "node-uniffi",
  "proto",
  "rpc",
  "types",
  "utils",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
beetswap = "0.5"
blockstore = "0.8"
leopard-codec = "0.2"
lumina-node = { version = "0.18.0", path = "node" }
lumina-node-wasm = { version = "0.13.0", path = "node-wasm" }
lumina-utils = { version = "0.5.1", path = "utils" }
celestia-client = { version = "0.4.0", path = "client" }
celestia-proto = { version = "0.12.0", path = "proto" }
celestia-grpc = { version = "0.10.0", path = "grpc", default-features = false }
celestia-grpc-macros = { version = "0.6.0", path = "grpc/grpc-macros" }
celestia-rpc = { version = "0.16.0", path = "rpc", default-features = false }
celestia-types = { version = "0.18.0", path = "types", default-features = false }

anyhow = "1.0.40"
async-stream = "0.3.5"
async-trait = "0.1.80"
base64 = "0.22.1"
bytes = { version = "1.6", default-features = false }
cid = { version = "0.11", default-features = false }
dotenvy = "0.15"
futures = "0.3.30"
futures-util = "0.3"
# we don't depend on `getrandom` directly, but it requires additional actions
# to build for wasm32, thus we need to specify it and enable certain features
# and set `rustflags` in `.cargo/config.toml`.
# See <https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support>
# libp2p 0.56 has dependency on both rand 0.8.5 and 0.9.2, which means we need both
getrandom_02 = { package = "getrandom", version = "0.2.10", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
hex = "0.4.3"
http = "1"
http-body = "1"
js-sys = "0.3.77"
jsonrpsee = { version = "0.26", default-features = false }
jsonrpsee-core = { version = "0.26", default-features = false }
jsonrpsee-types = { version = "0.26", default-features = false }
k256 = "0.13"
libp2p = "0.56"
libp2p-identity = "0.2.12"
libp2p-websocket-websys = "0.5.0"
nmt-rs = "0.2.2"
pin-project = "1.1.5"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
protox = "0.8"
rand = "0.8.5"
redb = "2.6"
rexie = "0.6"
rust-embed = "8"
send_wrapper = { version = "0.6", features = ["futures"] }
serde = "1.0.194"
serde_json = "1.0.142"
serde_repr = "0.1.17"
serde-wasm-bindgen = "0.6"
tendermint = { version = "0.40.3", default-features = false }
tendermint-proto = "0.40.3"
time = { version = "0.3.35", default-features = false }
tokio = "1.42"
tokio-util = "0.7.14"
tokio-stream = "0.1.16"
tonic = { version = "0.13", default-features = false }
tonic-build = { version = "0.13", default-features = false }
tonic-web-wasm-client = "0.7"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.15"
uniffi = "0.29.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.43"
wasm-bindgen-test = "0.3"
web-sys = "0.3.70"

[patch.crates-io]
# Uncomment to apply local changes
# beetswap = { path = "../beetswap" }
# blockstore = { path = "../blockstore" }
# nmt-rs = { path = "../nmt-rs" }
# libp2p = { path = "../../rust-libp2p/libp2p" }
# libp2p-core = { path = "../../rust-libp2p/core" }
# libp2p-swarm = { path = "../../rust-libp2p/swarm" }
# wasm-bindgen = { path = "../wasm-bindgen" }

# Uncomment this if you need debug symbols in release.
# Also check node-wasm's `Cargo.toml`.
# [profile.release]
# debug = true
