[package]
name = "blockstore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "An IPLD blockstore capable of holding arbitrary data indexed by CID"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["bitswap", "blockstore", "ipld", "cid"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "data-structures"]

[dependencies]
async-trait = "0.1.73"
cid = "0.11.0"
dashmap = "5.5.3"
multihash = "0.19.1"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.29.0", features = ["macros", "rt"] }

# doc-tests
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]

[package.metadata.cargo-udeps.ignore]
development = ["multihash-codetable"]
