[package]
name = "blockstore"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "An IPLD blockstore capable of holding arbitrary data indexed by CID"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["bitswap", "blockstore", "ipld", "cid"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "data-structures"]

[dependencies]
async-trait = "0.1.73"
cid = "0.11.0"
dashmap = "5.5.3"
lru = { version = "0.12.2", optional = true }
multihash = "0.19.1"
# Upgrading this dependency invalidates existing persistent dbs.
# Those can be restored by migrating between versions:
# https://docs.rs/sled/latest/sled/struct.Db.html#examples-1
sled = { version = "0.34.7", optional = true }
tokio = { version = "1.29.0", features = ["macros", "rt"], optional = true }
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.29.0", features = ["macros", "rt"] }
tempfile = "3.10"

# doc-tests
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }

[features]
lru = ["dep:lru"]
sled = ["dep:sled", "dep:tokio"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]

[package.metadata.cargo-udeps.ignore]
development = ["multihash-codetable"]
