[package]
name = "celestia"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
celestia-node = { workspace = true }
celestia-rpc = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy = "0.15.7"
libp2p = { version = "0.52.3", features = [
  "ed25519",
  "noise",
  "tcp",
  "tokio",
  "yamux",
] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
