[package]
name = "lumina-cli"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
description = "Celestia data availability node implementation in Rust"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
# readme = "README.md" -- It's using the project's root readme as for now, should it have a separate one?
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina", "node"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "asynchronous",
  "command-line-utilities",
  "cryptography::cryptocurrencies",
  "network-programming",
  "wasm",
]

[[bin]]
name = "lumina"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blockstore.workspace = true
celestia-rpc = { workspace = true, features = ["p2p"] }
celestia-types.workspace = true
libp2p.workspace = true
lumina-node.workspace = true

anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
dotenvy = "0.15.7"
mime_guess = "2.0.4"
parse_duration = "2.1.1"
redb = "2.1.1"
rust-embed = { version = "8.4.0", features = ["interpolate-folder-path"] }
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
browser-node = []
