[package]
name = "lumina-cli"
version = "0.10.0"
edition.workspace = true
license = "Apache-2.0"
description = "Celestia data availability node implementation in Rust"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
rust-version = "1.88"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina", "node"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "asynchronous",
  "command-line-utilities",
  "cryptography::cryptocurrencies",
  "network-programming",
  "wasm",
]

[[bin]]
name = "lumina"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blockstore.workspace = true
celestia-rpc = { workspace = true, features = ["p2p"] }
celestia-types.workspace = true
lumina-node.workspace = true

anyhow.workspace = true
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
directories = "6"
dotenvy.workspace = true
libp2p.workspace = true
mime_guess = "2"
parse_duration = "2"
redb.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
browser-node = []
