[package]
name = "celestia-client"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Celestia client combining RPC and gRPC functionality."
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "api-bindings",
  "asynchronous",
  "encoding",
  "cryptography::cryptocurrencies",
]

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.31"
hex = "0.4.3"
jsonrpsee-core = "0.25.1"
jsonrpsee-types = "0.25.1"
k256 = "0.13.4"
serde_json = "1.0.140"
tendermint.workspace = true
thiserror = "2.0.12"
tonic = { version = "0.12.3", default-features = false }
zeroize = "1.8.1"

celestia-grpc.workspace = true
celestia-proto.workspace  = true
celestia-rpc = { workspace = true, default-features = false }
celestia-types.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12.3", default-features = false, features = [ "transport" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
celestia-grpc = { workspace = true, features = ["wasm-bindgen"] }
celestia-rpc = { workspace = true, features = ["wasm-bindgen"] }
celestia-types = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { version = "0.2.15", features = ["js"] }
tonic-web-wasm-client = "0.6.2"
wasm-bindgen-test.workspace = true

[dev-dependencies]
lumina-utils = { workspace = true, features = ["test-utils"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
