[package]
name = "celestia-client"
version = "0.4.0"
edition.workspace = true
license = "Apache-2.0"
description = "Celestia client combining RPC and gRPC functionality."
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
rust-version = "1.87"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "api-bindings",
  "asynchronous",
  "encoding",
  "cryptography::cryptocurrencies",
]

[dependencies]
celestia-grpc.workspace = true
celestia-proto.workspace  = true
celestia-rpc = { workspace = true, default-features = false }
celestia-types.workspace = true
tonic.workspace = true
blockstore.workspace = true

async-stream.workspace = true
bytes.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-body.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
k256.workspace = true
serde_json.workspace = true
tendermint.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true, features = ["transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
celestia-grpc = { workspace = true, features = ["wasm-bindgen"] }
celestia-rpc = { workspace = true, features = ["wasm-bindgen"] }
celestia-types = { workspace = true, features = ["wasm-bindgen"] }
getrandom_03.workspace = true
tonic-web-wasm-client.workspace = true

[dev-dependencies]
jsonrpsee.workspace = true
lumina-utils = { workspace = true, features = ["test-utils"] }
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = ['tls-native-roots']
# Add system trust roots to `rustls` in `tonic`.
#
# Selecting this feature enables TLS support in grpc client.
tls-native-roots = ["celestia-grpc/tls-native-roots"]
# Add the standard trust roots from webpki to `rustls` in `tonic`
#
# Selecting this feature enables TLS support in grpc client.
tls-webpki-roots = ["celestia-grpc/tls-webpki-roots"]
# Select the `ring` crypto provider for `rustls` in `tonic`
#
# Selecting this feature doesn't enable tls support in the client, it only guides
# `tonic` which provider to use if tls is enabled.
tls-ring = ["celestia-grpc/tls-ring"]
# Select the `aws-lc` crypto provider for `rustls` in `tonic`
#
# Selecting this feature doesn't enable tls support in the client, it only guides
# `tonic` which provider to use if tls is enabled.
tls-aws-lc = ["celestia-grpc/tls-aws-lc"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
