[package]
name = "celestia-grpc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "A client for interacting with Celestia validator nodes gRPC"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "api-bindings",
  "asynchronous",
  "encoding",
  "cryptography::cryptocurrencies",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
celestia-grpc-macros = { version = "0.3.0", path = "grpc-macros" }
celestia-proto = { workspace = true, features = ["tonic"] }
celestia-types.workspace = true
prost.workspace = true
tendermint-proto.workspace = true
tendermint.workspace = true
lumina-utils = { workspace = true, features = ["time"] }

async-trait = { version = "0.1.88", optional = true }
bytes = "1.8"
hex = "0.4.3"
http-body = "1"
ics23 = { version = "0.12.0", default-features = false, features = ["std"] }
k256 = "0.13.4"
serde = "1.0.215"
serde_json = { version = "1.0.140", optional = true }
signature = "2.2.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["sync"] }
tonic = { version = "0.12.3", default-features = false, features = [
  "codegen", "prost"
]}
tracing = "0.1.40"
uniffi = { version = "0.29.2", optional = true, features = ["tokio"] }
futures = "0.3.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38.0", features = ["time"] }
tonic = { version = "0.12.3", default-features = false, features = [ "transport", "tls-native-roots" ] }
rustls-native-certs = { version = "0.8.1", optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls-webpki = { version = "0.103.4", optional = true }
rustls = { version = "0.23.29", default-features = false, features = [
  "std", "ring"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.30"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
send_wrapper = { version = "0.6.0", features = ["futures"] }
tonic-web-wasm-client = "0.6"

js-sys = { version = "0.3.70", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4.43", optional = true }

[dev-dependencies]
celestia-rpc = { workspace = true }
futures = "0.3.30"
lumina-utils = { workspace = true, features = ["test-utils"] }
rand_core = "0.6.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
celestia-rpc = { workspace = true, features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4.43"
wasm-bindgen-test.workspace = true

[features]
default = ['tls-native-roots']
wasm-bindgen = ["celestia-types/wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
uniffi = ["dep:uniffi", "dep:async-trait", "dep:serde_json", "celestia-types/uniffi"]
tls-native-roots = ["dep:rustls-native-certs", "dep:rustls-webpki"]
tls-webpki-roots = ["dep:webpki-roots", "dep:rustls-webpki"]
