[package]
name = "celestia-grpc"
version = "0.12.0"
edition.workspace = true
license = "Apache-2.0"
description = "A client for interacting with Celestia validator nodes gRPC"
authors = ["Celestia <contact@celestia.org>"]
homepage = "https://www.celestia.org"
repository = "https://github.com/celestiaorg/lumina"
readme = "README.md"
rust-version = "1.87"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "api-bindings",
  "asynchronous",
  "encoding",
  "cryptography::cryptocurrencies",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
celestia-grpc-macros.workspace = true
celestia-proto = { workspace = true, features = ["tonic"] }
celestia-types.workspace = true
lumina-utils = { workspace = true, features = ["time"] }

arc-swap = "1"
async-trait = { workspace = true, optional = true }
bytes.workspace = true
dyn-clone = "1"
futures.workspace = true
hex.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util = "0.1"
ics23 = { version = "0.12", default-features = false, features = ["std"] }
k256.workspace = true
prost.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
signature = "2"
tendermint.workspace = true
tendermint-proto.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tonic = { workspace = true, features = ["codegen"] }
tracing.workspace = true
uniffi = { workspace = true, optional = true, features = ["tokio"] }
zeroize = "1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"] }
tonic = { workspace = true, features = ["transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02.workspace = true
gloo-timers.workspace = true
js-sys = { workspace = true, optional = true }
send_wrapper.workspace = true
tonic-web-wasm-client.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[dev-dependencies]
celestia-rpc.workspace = true
futures.workspace = true
lumina-utils = { workspace = true, features = ["test-utils"] }
rand.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hyper = { version = "1.8", features = ["http2", "server", "client"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http2", "server-auto", "tokio"] }
tokio = { workspace = true, features = ["rt", "macros", "net"] }
tokio-stream = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
celestia-rpc = { workspace = true, features = ["wasm-bindgen"] }
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true

[features]
default = ['tls-native-roots']
wasm-bindgen = ["celestia-types/wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
uniffi = ["dep:async-trait", "dep:uniffi", "dep:serde_json", "celestia-types/uniffi"]
# Add system trust roots to `rustls` in `tonic`.
#
# Selecting this feature enables TLS support in grpc client.
tls-native-roots = ["lumina-utils/tonic-tls-native-roots-except-wasm32"]
# Add the standard trust roots from webpki to `rustls` in `tonic`
#
# Selecting this feature enables TLS support in grpc client.
tls-webpki-roots = ["lumina-utils/tonic-tls-webpki-roots-except-wasm32"]
# Select the `ring` crypto provider for `rustls` in `tonic`
#
# Selecting this feature doesn't enable tls support in the client, it only guides
# `tonic` which provider to use if tls is enabled.
tls-ring = ["lumina-utils/tonic-tls-ring-except-wasm32"]
# Select the `aws-lc` crypto provider for `rustls` in `tonic`
#
# Selecting this feature doesn't enable tls support in the client, it only guides
# `tonic` which provider to use if tls is enabled.
tls-aws-lc = ["lumina-utils/tonic-tls-ring-except-wasm32"]
