[package]
name = "lumina-node-uniffi"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Mobile bindings for Lumina node"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "./src/bin/uniffi-bindgen.rs"

[dependencies]
lumina-node = { workspace = true, features = ["uniffi"] }
blockstore.workspace = true
celestia-types.workspace = true
tendermint.workspace = true
libp2p.workspace = true
redb = "2.1.1"
thiserror = "1.0.61"
serde_json = "1.0.64"
uniffi = { version = "0.28.3", features = ["bindgen", "tokio", "cli"] }
tokio = { version = "1.38.0", features = ["macros", "sync"] }
