[package]
name = "lumina-node-uniffi"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
description = "Mobile bindings for Lumina node"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "./src/bin/uniffi-bindgen.rs"

[dependencies]
lumina-node = { workspace = true, features = ["uniffi"] }
celestia-types = { workspace = true, features = ["uniffi"] }
celestia-grpc = { workspace = true, features = ["uniffi"] }
celestia-proto = { workspace = true, features = ["uniffi"] }
blockstore.workspace = true
tendermint.workspace = true
libp2p.workspace = true
async-trait = "0.1.88"
k256 = "0.13.4"
redb = "2.5.0"
serde_json = "1.0.64"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "sync"] }
uniffi = { version = "0.29.2", features = ["bindgen", "tokio", "cli"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic.workspace = true

[features]
# webpki is needed for TLS on android and iOS
# https://github.com/hyperium/tonic/issues/2369
default = ['tls-webpki-roots']
tls-native-roots = ["celestia-grpc/tls-native-roots"]
tls-webpki-roots = ["celestia-grpc/tls-webpki-roots"]
