[package]
name = "lumina-node-uniffi"
version = "0.5.1"
edition.workspace = true
license = "Apache-2.0"
description = "Mobile bindings for Lumina node"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
rust-version = "1.88"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "./src/bin/uniffi-bindgen.rs"

[dependencies]
blockstore.workspace = true
celestia-types = { workspace = true, features = ["uniffi"] }
celestia-grpc = { workspace = true, features = ["uniffi"] }
celestia-proto = { workspace = true, features = ["uniffi"] }
lumina-node = { workspace = true, features = ["uniffi"] }

async-trait.workspace = true
futures.workspace = true
k256.workspace = true
libp2p.workspace = true
redb.workspace = true
serde_json.workspace = true
tendermint.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
uniffi = { workspace = true, features = ["tokio", "cli"] }

[features]
# webpki is needed for TLS on android and iOS
# https://github.com/hyperium/tonic/issues/2369
default = ['tls-webpki-roots']
tls-native-roots = ["celestia-grpc/tls-native-roots"]
tls-webpki-roots = ["celestia-grpc/tls-webpki-roots"]
