[package]
name = "lumina-node-wasm"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Browser compatibility layer for the Lumina node"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/lumina"
readme = "README.md"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["blockchain", "celestia", "lumina", "node", "browser"]
# Must be one of <https://crates.io/category_slugs>
categories = [
  "asynchronous",
  "cryptography::cryptocurrencies",
  "network-programming",
  "wasm",
  "web-programming",
]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
blockstore = { workspace = true }
celestia-tendermint = { workspace = true }
celestia-types = { workspace = true }
libp2p = { workspace = true, features = ["serde"] }
lumina-node = { workspace = true }

anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
enum-as-inner = "0.6.0"
futures = "0.3.30"
gloo-timers = "0.3.0"
instant = "0.1.13"
js-sys = "0.3.69"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.19"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tokio = { version = "1.38.0", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "BroadcastChannel",
  "DedicatedWorkerGlobalScope",
  "Headers",
  "MessageEvent",
  "MessagePort",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "SharedWorker",
  "SharedWorkerGlobalScope",
  "StorageManager",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "WorkerOptions",
  "WorkerType",
] }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

# Uncomment this if you need debug symbols in release.
# Also check workspace's `Cargo.toml`.
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-O4', '-g']
